feat: Implement Newsletter Subscription (Maintenance Page + Admin)

--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -70,7 +70,48 @@
             <br><br>
             <span style="font-size: 0.9em; opacity: 0.7;">L'équipe Essensys</span>
         </p>
+
+        <div style="margin-top: 2rem; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 1.5rem;">
+            <p style="font-size: 1rem; margin-bottom: 1rem;">Tenez-moi informé du lancement :</p>
+            <form id="subscribeForm" style="display: flex; gap: 10px; justify-content: center;">
+                <input type="email" id="email" placeholder="Votre email" required
+                    style="padding: 10px; border-radius: 4px; border: 1px solid #444; background: rgba(0,0,0,0.3); color: white; width: 200px;">
+                <button type="submit"
+                    style="padding: 10px 20px; border-radius: 4px; border: none; background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%); color: #000; font-weight: bold; cursor: pointer;">
+                    S'inscrire
+                </button>
+            </form>
+            <p id="message" style="font-size: 0.9rem; margin-top: 10px; height: 1.2rem;"></p>
+        </div>
     </div>
+
+    <script>
+        document.getElementById('subscribeForm').addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const email = document.getElementById('email').value;
+            const msg = document.getElementById('message');
+
+            try {
+                const res = await fetch('/api/newsletter/subscribe', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ email })
+                });
+
+                if (res.ok) {
+                    msg.style.color = '#92FE9D';
+                    msg.textContent = "Merci ! Vous êtes inscrit.";
+                    document.getElementById('subscribeForm').reset();
+                } else {
+                    msg.style.color = '#ff4444';
+                    msg.textContent = "Erreur lors de l'inscription.";
+                }
+            } catch (err) {
+                msg.style.color = '#ff4444';
+                msg.textContent = "Erreur de connexion.";
+            }
+        });
+    </script>
 </body>
 
 </html>
